@startuml
skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false

' ----- Classes de Domínio: Clientes -----

abstract class Cliente {
  # identificador: String
  + Cliente(identificador: String)
  + getIdentificador(): String
  + {abstract} calcularCusto(entrada: LocalDateTime, saida: LocalDateTime): double
}

abstract class ClientePreCadastrado {
  # nome: String
  # placasCadastradas: Set<String>
  + ClientePreCadastrado(identificador: String, nome: String)
  + getNome(): String
  + {abstract} adicionarPlaca(placa: String): boolean
  + possuiPlaca(placa: String): boolean
}

class Professor {
  + Professor(cpf: String, nome: String)
  + adicionarPlaca(placa: String): boolean
  + calcularCusto(entrada: LocalDateTime, saida: LocalDateTime): double
}

class Estudante {
  - saldoConta: double
  + Estudante(cpf: String, nome: String, saldoInicial: double)
  + adicionarPlaca(placa: String): boolean
  + calcularCusto(entrada: LocalDateTime, saida: LocalDateTime): double
  + debitar(valor: double): void
  + getSaldo(): double
}

class Empresa {
  - debitosAcumulados: double
  - inadimplente: boolean
  + Empresa(cnpj: String, nome: String)
  + adicionarPlaca(placa: String): boolean
  + calcularCusto(entrada: LocalDateTime, saida: LocalDateTime): double
  + isInadimplente(): boolean
  + adicionarDebito(valor: double): void
}

class ClienteAvulso {
  + ClienteAvulso(placa: String)
  + calcularCusto(entrada: LocalDateTime, saida: LocalDateTime): double
}

' ----- Classes de Registro e Controle -----

class RegistroEstacionamento {
  ~ placa: String
  ~ entrada: LocalDateTime
  ~ saida: LocalDateTime
  ~ valorDevido: double
  ~ valorPago: double
  + RegistroEstacionamento(placa: String, cliente: Cliente, entrada: LocalDateTime)
}

class EstacionamentoControle {
  - clientesPorDocumento: Map<String, ClientePreCadastrado>
  - clientesPorPlaca: Map<String, ClientePreCadastrado>
  - veiculosEstacionados: Map<String, RegistroEstacionamento>
  - placasBloqueadas: Set<String>
  + cadastrarCliente(cliente: ClientePreCadastrado): void
  + vincularPlaca(documento: String, placa: String): void
  + registrarEntrada(placa: String, horario: LocalDateTime): boolean
  + registrarSaida(placa: String, horario: LocalDateTime): void
}

class GerenciadorCSV {
  + {static} salvarClientes(clientes: Map<String, ClientePreCadastrado>, caminhoArquivo: String): void
}

' ----- Relacionamentos -----

Cliente <|-- ClientePreCadastrado
Cliente <|-- ClienteAvulso
ClientePreCadastrado <|-- Professor
ClientePreCadastrado <|-- Estudante
ClientePreCadastrado <|-- Empresa

RegistroEstacionamento "*" o-- "1" Cliente : "referencia >"
EstacionamentoControle "1" *-- "*" RegistroEstacionamento : "gerencia >"
EstacionamentoControle "1" *-- "*" ClientePreCadastrado : "mantém >"

@enduml